--- a/parkir-api/package.json
+++ b/parkir-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest tests/",
     "start": "node app.js"
   },
   "keywords": [],
@@ -15,13 +15,23 @@
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^2.1.1",
     "ajv-keywords": "^5.1.0",
+    "axios": "^1.2.0",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
-    "env": "0.0.2",
     "express": "^4.18.2",
-    "install": "^0.13.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.8"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "jest": "^29.3.1",
+    "sinon": "^15.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
