--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
             POSTGRES_PASSWORD: 'username'
             POSTGRES_DB: 'parkir'
         volumes:
-            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
             - data:/var/lib/postgresql/data
+            - ./data/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
         restart: always
         ports:
             - "5432:5432"
@@ -23,12 +23,15 @@ services:
             - "5000:3000"
         depends_on:
             - parkir-db
+        links:
+            - parkir-db
         volumes:
             - ./parkir-api:/app
             - ./parkir-api/node_modules:/app/node_modules
 
 volumes:
     data:
+        driver: local
 
 networks:
     default:
