--- a/parkir-api/package.json
+++ b/parkir-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest tests/",
+    "test": "jest tests/ --coverage --verbose",
     "start": "node app.js"
   },
   "keywords": [],
